# models/user.js
@@ -1,0 +1,12 @@
+const mongoose = require('mongoose');
+
+const UserSchema = new mongoose.Schema({
+    googleId: { type: String, unique: true, sparse: true },
+    displayName: { type: String, required: true },
+    firstName: { type: String, required: true, unique: true },
+    lastName: { type: String, required: true, unique: true },
+    image: { type: String },
+    createdAt: { type: Date, default: Date.now }
+}, { timestamps: true });
+
+module.exports = mongoose.model('User', UserSchema);
